# HexExtractor

./: CMakeLists.txt  README.md
dat/: fandisk_4k_polycube_after_split.tet  fandisk_4k_polycube_after_split.tet.txt  tet_mesh.vtk
extractor/: CMakeLists.txt
src/: hex_extractor.h
src/extractor/: extractor.h  hex_extractor.cpp  hex_extractor.h
src/test/: extract_integer_grid.cpp
test/: CMakeLists.txt  extract_integer_grid.cpp  tet_format_transition.cpp
